[tool.poetry]
name = "tssc"
version = "0.1.0"
description = "Helpful package to search for TESS/Kepler/K2 data"
authors = ["TESS SCience Support Center <tesshelp@bigbang.gsfc.nasa.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.3.4"
astroquery = "^0.4.7"
joblib = "^1.3.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
pytest = "^7.4.4"
Requests = "^2.31.0"
rich = "^13.7.1"
tesswcs = "^1.1.2"
boto3 = "^1.34.25"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"
myst_parser = "^3.0.0"
sphinx_astropy = "^1.9.1"
sphinx_automodapi = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
