[tool.poetry]
name = "lksearch"
version = "0.1.0"
description = "A helpful little package to search for TESS/Kepler/K2 data"
authors = ["TESS SCience Support Center <tesshelp@bigbang.gsfc.nasa.gov>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^5.3.4"
astroquery = "^0.4.7"
numpy = "^1.26.4"
pandas = "^2.2.2"
requests = "^2.31.0"
tesswcs = "^1.1.2"
tqdm = "^4.50.0"
boto3 = "^1.34.25"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
nbsphinx = "^0.9.3"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"
sphinx_astropy = "^1.9.1"
sphinx_automodapi = "^0.17.0"
pydata-sphinx-theme = "^0.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
