[tool.poetry]
name = "lksearch"
version = "1.1.0"
description = "A helpful little package to search for TESS/Kepler/K2 data"
authors = ["TESS Science Support Center <tesshelp@bigbang.gsfc.nasa.gov>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
astropy = ">=5.0"
astroquery = "^0.4.7"
numpy = "^1.26.4"
pandas = "^2.2.2"
requests = "^2.31.0"
tesswcs = "^1.1.2"
tqdm = "^4.50.0"
boto3 = "^1.34.25"


[tool.poetry.group.cloud]
optional = true

[tool.poetry.group.cloud.dependencies]
fsspec = "^2024.6.1"
s3fs = "^2024.6.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
nbsphinx = "^0.9.3"
sphinx = "^7.3.7"
sphinx_rtd_theme = "^2.0.0"
sphinx_astropy = "^1.9.1"
sphinx_automodapi = "^0.17.0"
pydata-sphinx-theme = "^0.15.4"
jupyterlab = "^4.2.3"
line-profiler = "^4.1.3"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
